--- a/templates/baseimage.html
+++ b/templates/baseimage.html
@@ -1,6 +1,9 @@
-<h1>Submit Base Image Page</h1>
+{% extends 'base.html' %}
+{% block body %}
+<h1>Submit Base Image</h1>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Submit New Image</button>
+  <button type="submit">Submit Image</button>
 </form>
+{% endblock body %}
