--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
 {% block body %}
-    <h1>Django Image Meme Maker</h1>
+    <h1>Django Meme Jenny</h1>
     <ul>
         <h2>Finished Memes</h2>
         {% if finishedMEMES %}
             {% for meme in finishedMEMES %}
                 <table style="border: 5px solid brown;">
-                    <td>
-                        <h3>{{ meme.title }}</h3>
-                        <img src="{{ meme.meme_image.image }}" alt="{{ meme.title }}">
-                    </td>
+                    <tr>
+                        <td>
+                            <h3>{{ meme.title }}</h3>
+                            <img src="{{ meme.meme_image.image }}" alt="{{ meme.title }}">
+                        </td>
+                    </tr>
                 </table>
                 <br>
             {% endfor %}
-
         {% else %}
             <h3>No Memes Yet</h3>
         {% endif %}
@@ -24,13 +25,14 @@
         <h3>Add new a base image <a href="{% url 'add_image' %}">here</a></h3>
         {% for image in baseimages_list %}
             <table style="border: 5px solid orange;">
-                <td>
-                    {#                <h3>{{ meme.title }}</h3>#}
-                    <img src="{{ image.image.url }}">
-                    <p>{{ image.image.url }}</p>
-                    <a class="btn btn-primary" href="{% url 'add_meme_from_image' image.pk %}"
-                       role="button">Make a Meme from this image</a>
-                </td>
+                <tr>
+                    <td>
+                        <img src="{{ image.image.url }}">
+                        <p>{{ image.image.url }}</p>
+                        <a class="btn btn-primary" href="{% url 'add_meme_from_image' image.pk %}"
+                           role="button">Make a Meme from this image</a>
+                    </td>
+                </tr>
             </table>
             <br>
         {% endfor %}
