--- a/templates/meme_from_image.html
+++ b/templates/meme_from_image.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
-<h1>Make a Meme Page</h1>
+<h1>Make a Meme</h1>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Submit New Meme</button>
+  <button type="submit">Make The Meme</button>
 </form>
 {% endblock body %}
